# klab_web

./: contact.htm  corporate.htm  docker-compose.yml  gallery.htm  index-1.htm  index.htm  javascript.js  patent.md  privacy.htm  products.htm  services.htm  stylesheet.css  tandc.htm  top.htm
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: blueos.py  forum.py  shop.py  webhooks.py
backend/app/core/: config.py  database.py
backend/app/models/: forum.py  shop.py  user.py
backend/app/modules/blueos/: __init__.py  client.py  mavlink.py  telemetry.py  video.py
backend/app/modules/fintech/: __init__.py  revolut.py  telegram.py
backend/app/modules/forum/: __init__.py  service.py
backend/app/modules/shop/: __init__.py  cart.py  payment.py  service.py
improved/: index.htm  javascript.js  stylesheet.css
nginx/: nginx.conf
